--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_main.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_main.xml
@@ -9,32 +9,57 @@
 
     <Button
         android:id="@+id/login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="168dp"
-        android:layout_marginTop="488dp"
-        android:text="LOGIN"
+        android:layout_width="141dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="136dp"
+        android:layout_marginTop="10dp"
         android:onClick="goToLogin"
+        android:text="LOGIN"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/book" />
+
+    <Button
+        android:id="@+id/book"
+        android:layout_width="226dp"
+        android:layout_height="65dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="460dp"
+        android:text="BOOK A TICKET"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/update_profile"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="134dp"
-        android:text="Update Profile"
+        android:layout_height="65dp"
+        android:layout_marginStart="98dp"
+        android:text="UPDATE PROFILE"
+        android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/login" />
 
-    <Button
-        android:id="@+id/book"
+    <TextView
+        android:id="@+id/greeting"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="136dp"
-        android:layout_marginTop="568dp"
-        android:text="BOOK A TICKET"
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="40dp"
+        android:textSize="26dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/signOut"
+        android:layout_width="wrap_content"
+        android:layout_height="65dp"
+        android:layout_marginStart="137dp"
+        android:layout_marginTop="40dp"
+        android:onClick="signOut"
+        android:text="SIGN OUT"
+        android:textSize="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/update_profile" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
