--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_register.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_register.xml
@@ -80,6 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:hint="Phone"
+        android:maxLength="10"
         android:ems="10"
         android:inputType="phone"
         app:layout_constraintStart_toStartOf="@+id/email"
