--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_main.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:layout_height="65dp"
         android:layout_marginStart="92dp"
         android:layout_marginTop="460dp"
+        android:onClick="goToMovie"
         android:text="BOOK A TICKET"
         android:textSize="20dp"
         app:layout_constraintStart_toStartOf="parent"
