--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_main.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="10dp"
         android:onClick="goToLogin"
         android:text="LOGIN"
-        android:textSize="20dp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/book" />
 
@@ -26,7 +26,7 @@
         android:layout_marginStart="92dp"
         android:layout_marginTop="460dp"
         android:text="BOOK A TICKET"
-        android:textSize="20dp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -34,9 +34,10 @@
         android:id="@+id/update_profile"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginStart="98dp"
+        android:layout_marginStart="117dp"
+        android:onClick="goToUpdate"
         android:text="UPDATE PROFILE"
-        android:textSize="20dp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/login" />
 
@@ -54,11 +55,11 @@
         android:id="@+id/signOut"
         android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginStart="137dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginStart="146dp"
+        android:layout_marginTop="35dp"
         android:onClick="signOut"
         android:text="SIGN OUT"
-        android:textSize="20dp"
+        android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/update_profile" />
 
