--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/values/colors.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/values/colors.xml
@@ -11,4 +11,6 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#3F51B5</color>
+
+    <color name="diColor">#404E9E</color>
 </resources>
