[Fix]: Details functionalities

--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_checkout.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_checkout.xml
@@ -3,11 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginLeft="20dp"
     android:orientation="vertical"
     tools:context=".CheckoutActivity">
 
     <TextView
         android:text="Movie Tickets Details"
+        android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -17,32 +19,47 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         style="@style/display_information"
         android:id="@+id/fn" />
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:id="@+id/em"
         style="@style/display_information"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:id="@+id/movien"
         style="@style/display_information"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:id="@+id/shti"
         style="@style/display_information"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
         android:id="@+id/shda"
         style="@style/display_information"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:id="@+id/pt"
         style="@style/display_information"/>
+
+    <Button
+        android:id="@+id/button"
+        android:layout_marginTop="60dp"
+        android:layout_marginLeft="250dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="backToMain"
+        android:text="FINISH" />
 
 </LinearLayout>
