--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_main.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,12 @@
 
     <Button
         android:id="@+id/login"
-        android:layout_width="141dp"
+        android:layout_width="wrap_content"
         android:layout_height="65dp"
-        android:layout_marginStart="136dp"
+        android:layout_marginStart="115dp"
         android:layout_marginTop="10dp"
         android:onClick="goToLogin"
-        android:text="LOGIN"
+        android:text="SIGN IN / SIGN UP"
         android:textSize="16dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/book" />
