--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_checkout.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_checkout.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="25dp"
+        android:textSize="25sp"
         />
 
     <TextView
@@ -56,7 +56,7 @@
     <Button
         android:id="@+id/button"
         android:layout_marginTop="60dp"
-        android:layout_marginLeft="250dp"
+        android:layout_marginStart="250dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="backToMain"
