--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_update.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_update.xml
@@ -14,7 +14,7 @@
         android:layout_marginStart="56dp"
         android:layout_marginTop="60dp"
         android:ems="10"
-        android:hint="First Name"
+        android:hint="@string/tx1rg"
         android:inputType="textPersonName"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Last Name"
+        android:hint="@string/tx2rg"
         app:layout_constraintStart_toStartOf="@+id/firstName"
         app:layout_constraintTop_toBottomOf="@+id/firstName" />
 
@@ -37,7 +37,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="Address"
+        android:hint="@string/tx3rg"
         app:layout_constraintStart_toStartOf="@+id/lastName"
         app:layout_constraintTop_toBottomOf="@+id/lastName" />
 
@@ -48,7 +48,7 @@
         android:layout_marginTop="20dp"
         android:ems="10"
         android:inputType="textPersonName"
-        android:hint="City"
+        android:hint="@string/tx4rg"
         app:layout_constraintStart_toStartOf="@+id/address"
         app:layout_constraintTop_toBottomOf="@+id/address" />
 
@@ -58,7 +58,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:ems="10"
-        android:hint="Postal Code"
+        android:hint="@string/tx5rg"
         android:inputType="textPostalAddress"
         app:layout_constraintStart_toStartOf="@+id/city"
         app:layout_constraintTop_toBottomOf="@+id/city" />
@@ -68,7 +68,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:hint="Email"
+        android:hint="@string/tx6rg"
         android:ems="10"
         android:inputType="textEmailAddress"
         app:layout_constraintStart_toStartOf="@+id/code"
@@ -79,7 +79,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:hint="Phone"
+        android:hint="@string/tx7rg"
         android:maxLength="10"
         android:ems="10"
         android:inputType="phone"
@@ -93,7 +93,7 @@
         android:layout_marginTop="30dp"
         android:ems="10"
         android:inputType="textPassword"
-        android:hint="Password"
+        android:hint="@string/tx8rg"
         app:layout_constraintStart_toStartOf="@+id/phone"
         app:layout_constraintTop_toBottomOf="@+id/phone" />
 
@@ -102,7 +102,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
-        android:hint="Password Confirmation"
+        android:hint="@string/tx1ud"
         android:ems="10"
         android:inputType="textPassword"
         app:layout_constraintStart_toStartOf="@+id/password"
@@ -115,7 +115,7 @@
         android:layout_marginEnd="28dp"
         android:layout_marginBottom="30dp"
         android:onClick="update"
-        android:text="Update"
+        android:text="@string/bntxud"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
