--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_checkout.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_checkout.xml
@@ -3,25 +3,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginLeft="20dp"
+    android:layout_marginStart="20dp"
     android:orientation="vertical"
     tools:context=".CheckoutActivity">
 
     <TextView
-        android:text="Movie Tickets Details"
+        android:text="@string/txtchk"
         android:layout_marginTop="20dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:textSize="25sp"
-        />
+        android:textSize="@dimen/smt"/>
 
     <TextView
+        android:id="@+id/fn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        style="@style/display_information"
-        android:id="@+id/fn" />
+        style="@style/display_information"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -60,6 +59,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="backToMain"
-        android:text="FINISH" />
+        android:text="@string/tbtf" />
 
 </LinearLayout>
