--- a/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_login.xml
+++ b/LuzAriza_OscarQuispe_COMP304_Assign4/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="96dp"
-        android:text="Login"
+        android:text="@string/txt1"
         android:onClick="login"
         app:layout_constraintStart_toEndOf="@+id/register"
         app:layout_constraintTop_toTopOf="@+id/register" />
@@ -23,7 +23,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="84dp"
         android:onClick="goToRegister"
-        android:text="Register"
+        android:text="@string/txt2"
         app:layout_constraintStart_toStartOf="@+id/password"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
@@ -54,7 +54,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        android:text="User/Email"
+        android:text="@string/txt3"
         app:layout_constraintBottom_toTopOf="@+id/email"
         app:layout_constraintStart_toStartOf="@+id/email" />
 
@@ -63,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:text="Password"
+        android:text="@string/txt4"
         app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintStart_toStartOf="@+id/password" />
 
